fixed homepage article covers

--- a/scss/pages/_front-page.scss
+++ b/scss/pages/_front-page.scss
@@ -82,7 +82,7 @@
 
 .index-content {
 	display: flex;
-	padding: 30px 100px;
+	padding: 30px 0px;
 	h2 {
 		font-size: 40px;
 		font-family: 'PlayFair Display', serif;
@@ -104,9 +104,11 @@
 			.article {
 				margin-right: 30px;
 				display: inline-block;
-				img {
+				div {
 					width: 225px;
 					height: 150px;
+					background-size: cover;
+					background-position: center;
 				}
 				h3 {
 					text-transform: uppercase;
