--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@ footer {
 
 .index-content {
   display: flex;
-  padding: 30px 100px; }
+  padding: 30px 0px; }
   .index-content h2 {
     font-size: 40px;
     font-family: 'PlayFair Display', serif;
@@ -448,9 +448,11 @@ footer {
       .article-content .article-display .article-container .article {
         margin-right: 30px;
         display: inline-block; }
-        .article-content .article-display .article-container .article img {
+        .article-content .article-display .article-container .article div {
           width: 225px;
-          height: 150px; }
+          height: 150px;
+          background-size: cover;
+          background-position: center; }
         .article-content .article-display .article-container .article h3 {
           text-transform: uppercase;
           font-weight: 800;
